fixed z-index of up circle

--- a/src/styles.css
+++ b/src/styles.css
@@ -530,7 +530,7 @@
   padding: 14px 17px;
   background-color: var(--primary);
   border-radius: 50%;
-  z-index: 3;
+  z-index: 2;
 }
 .circle i {
   font-size: 26px;
